fixed card index

--- a/index.html
+++ b/index.html
@@ -8,56 +8,79 @@
   <body class="background-image">
     <div class="container">
       <div class="row">
-          <div class="row mt-5">
-              <img src="images/logo-landing.png" />
-              <h1 class="index-logo">White Bear</h1>
-            </div><!-- End of header-->
-            <!-- Start of 1st card -->
-            <div class="row card-index">
-              <div class="col-xl-5 offset-xl-1 col-sm-8 col-lg-8 offset-4 offset-sm-2 offset-md-2 col-10 offset-1">
-              <div class="card mb-5">
-                <div class="card-body landing-text">
-                  <h2 class="card-title">Nice to meet you</h2>
-                  <p class="mb-2">Sign up for White Bear.</p> 
-                  <p class="mb-3">Free forever.</p>
-                  <button id="sign-up"
-                   class="btn btn-block btn-success mb-4">Let's get you signed up</button>
-                   <!-- Start of toggle -->
-                  <form id="form-toggle"
-                  class="form-group d-none">
-                  <label class="text-muted"
-                  for="email">Email Address</label>
-                  <input class="form-control" type="email" id="emailCreate" name="email"/>
-                  <label class="text-muted"
-                  for="password">Password</label>
-                  <input class="form-control mb-3" type="password" id="password" name="password"/>
-                  <button id="letsGo" class="btn btn-success btn-block float-right">Lets go!</button>
-                  </form>
-                  </div>
-                </div>
-              </div>
-              <!-- Start of 2nd card -->
-              <div class="col-xl-5 offset-xl-1 col-sm-8 col-lg-8 offset-sm-2 col-10 offset-1">
-                <div class="card mb-5">
-                  <div class="card-body landing-text">
-                    <h2 class="card-title">Welcome Back</h2>
-                    <p class="mb-3">Log-in with your email address and password.</p>
-                    <form class="form-group">
-                    <label class="text-muted"
-                    for="email">Email Address</label>
-                    <input class="form-control" type="email" id="email" name="email"/>
-                    <label class="text-muted"
-                    for="password">Password</label>
-                    <input class="form-control mb-3" type="password" id="password" name="password"/>
-                    <a href="create-answer.html"
-                     class="btn btn-success float-right">Log in</a>
-                    </form>
-                    </div>
-                  </div>
-                </div>
+        <img src="images/logo-landing.png" />
+        <h1 class="index-logo">White Bear</h1>
+      </div>
+      <!-- End of header-->
+      <!-- Start of 1st card -->
+      <div class="row card-index">
+        <div
+          class="col-xl-5 offset-xl-1 col-sm-8 col-lg-8 offset-4 offset-sm-2 offset-md-2 col-10 offset-1"
+        >
+          <div class="card mb-5">
+            <div class="card-body landing-text">
+              <h2 class="card-title">Nice to meet you</h2>
+              <p class="mb-2">Sign up for White Bear.</p>
+              <p class="mb-3">Free forever.</p>
+              <button id="sign-up" class="btn btn-block btn-success mb-4">
+                Let's get you signed up
+              </button>
+              <!-- Start of toggle/First card -->
+              <form id="form-toggle" class="form-group d-none">
+                <label class="text-muted" for="email">Email Address</label>
+                <input
+                  class="form-control"
+                  type="email"
+                  id="emailCreate"
+                  name="email"
+                />
+                <label class="text-muted" for="password">Password</label>
+                <input
+                  class="form-control mb-3"
+                  type="password"
+                  id="passwordCreate"
+                  name="password"
+                />
+                <button
+                  id="letsGo"
+                  class="btn btn-success btn-block float-right"
+                >
+                  Lets go!
+                </button>
+              </form>
             </div>
           </div>
-        
+        </div>
+        <!-- Start of 2nd card -->
+        <div
+          class="col-xl-5 offset-xl-1 col-sm-8 col-lg-8 offset-sm-2 col-10 offset-1"
+        >
+          <div class="card mb-5">
+            <div class="card-body landing-text">
+              <h2 class="card-title">Welcome Back</h2>
+              <p class="mb-3">Log-in with your email address and password.</p>
+              <form class="form-group">
+                <label class="text-muted" for="email">Email Address</label>
+                <input
+                  class="form-control"
+                  type="email"
+                  id="email"
+                  name="email"
+                />
+                <label class="text-muted" for="password">Password</label>
+                <input
+                  class="form-control mb-3"
+                  type="password"
+                  id="password"
+                  name="password"
+                />
+                <a href="create-answer.html" class="btn btn-success float-right"
+                  >Log in</a
+                >
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
