added text count

--- a/create-answer.html
+++ b/create-answer.html
@@ -63,8 +63,8 @@
           <!-- ^End of "m-5" -->
 
           
-
-          <p class="float-right" id="count">0/240</p>
+      <!-- Add ID to p tag to text danger when card count is over 240 --> 
+           <p class="float-right"><span id="count">0</span>/240</p>
           <div class="clearfix"></div>
             <a href="create-cue.html"
               class="btn btn-lg btn-outline-primary float-right"
