added red text when over 240

--- a/create-answer.html
+++ b/create-answer.html
@@ -64,10 +64,10 @@
 
           
       <!-- Add ID to p tag to text danger when card count is over 240 --> 
-           <p class="float-right"><span id="count">0</span>/240</p>
+           <p id="count2" class="float-right"><span id="count">0</span>/240</p>
           <div class="clearfix"></div>
-            <a href="create-cue.html"
-              class="btn btn-lg btn-outline-primary float-right"
+            <a id="count3" href="#"
+              class="btn btn-lg btn-outline-primary float-right disabled" 
               
             >Next
           </a>
