nuked, re-wrote script. added more comments

--- a/create-answer.html
+++ b/create-answer.html
@@ -60,13 +60,14 @@
               </div>
             </div>
           </div>
-          <!-- ^End of "m-5" -->
+          <!-- ^End of "m-5"/ textbox -->
 
           
-      <!-- Add ID to p tag to text danger when card count is over 240 --> 
+      <!-- Added ID to p tag to text danger when card count is over 240 --> 
+      <!-- Added span to p tag to manipulate 0-->
            <p id="count2" class="float-right"><span id="count">0</span>/240</p>
           <div class="clearfix"></div>
-            <a id="count3" href="#"
+            <a id="nextBcreate" href="#"
               class="btn btn-lg btn-outline-primary float-right disabled" 
               
             >Next
