--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                   id="emailCreate"
                   name="email"
                 />
+
                 <p class="text-danger d-none" id="emailError">
                   Please enter your email address
                 </p>
@@ -46,6 +47,9 @@
                 />
                 <div class="text-danger d-none" id="passwordError">
                   Please enter your password
+                </div>
+                <div class="text-danger d-none" id="passwordErrorEmVal">
+                  Your email address cannot be used in your password.
                 </div>
                 <div class="text-danger d-none" id="passwordError9C">
                   Your password must be at least 9 characters.
